# noxrel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: features.md  generate_architecture_diagram.py
frontend/web-admin/: next.config.ts  package-lock.json  package.json
frontend/web-admin/scripts/: silence-dep0205.cjs
frontend/web-admin/src/: proxy.ts
frontend/web-user/: .env.example  .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/web-user/src/: proxy.ts
graphify-out/: .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  GRAPH_TREE.html  graph.html  graph.json  manifest.json  noxrel-callflow.html
graphify-out/2026-06-08/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-11/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-02/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
infrastructure/: .env.example  docker-compose.infra.yml  docker-compose.yml
infrastructure/fluent-bit/: fluent-bit.conf  parsers.conf
infrastructure/grafana/dashboards/: noxrel-overview.json  platform-overview.json
infrastructure/k8s/: ingress.yml
infrastructure/k8s/configmaps/: billing-service.yml  live-service.yml  streaming-service.yml  transcode-worker.yml  user-service.yml  video-service.yml
infrastructure/k8s/observability/: fluent-bit.yml  otel-collector.yml  secrets.yml
infrastructure/k8s/secrets/: billing-service.yml  live-service.yml  streaming-service.yml  transcode-worker.yml  user-service.yml  video-service.yml
infrastructure/k8s/services/: billing-service.yml  kong.yml  live-service.yml  streaming-service.yml  transcode-worker.yml  user-service-hpa.yml  user-service.yml  video-service.yml
infrastructure/kibana/: dashboard.json  data_view.json  init.sh
infrastructure/kong/: kong.yml
infrastructure/localstack/init-scripts/: 01-s3-buckets.sh  04-streaming-bucket-policy.sh  05-live-bucket.sh
infrastructure/nginx-rtmp/: Dockerfile  nginx.conf
infrastructure/otel/: otel-collector-config.yaml
infrastructure/postgres/: init-databases.sh
infrastructure/prometheus/: alerts.yaml  prometheus.yml
services/billing-service/: .dockerignore  .env.example  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
services/billing-service/alembic/: env.py
services/billing-service/alembic/versions/: 0001_initial.py
services/billing-service/app/: main.py
services/billing-service/app/billing/: models.py  router.py  schemas.py  webhooks.py
services/billing-service/app/consumers/: user_registered.py
services/billing-service/app/core/: config.py  database.py  kafka.py  logging.py  metrics.py  security.py  stripe_client.py  telemetry.py
services/billing-service/app/jobs/: scheduler.py  tasks.py
services/billing-service/tests/: conftest.py  test_admin.py  test_checkout.py  test_consumer.py  test_health.py  test_invoices.py  test_payment_methods.py  test_plans.py  test_subscription.py  test_webhooks.py
services/live-service/: .env.example  AGENTS.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json
services/live-service/src/: config.ts  index.ts  types.ts
services/live-service/tests/: chat-clean.test.ts  (+5 more)
services/streaming-service/: .env.example  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/transcode-worker/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
services/transcode-worker/app/: worker.py
services/transcode-worker/app/core/: config.py  kafka.py  logging.py  s3.py  telemetry.py
services/transcode-worker/app/transcoder/: ffmpeg.py  pipeline.py  profiles.py
services/transcode-worker/tests/: conftest.py  test_ffmpeg.py  test_pipeline.py  test_s3.py
services/user-service/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
services/user-service/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
services/user-service/accounts/management/commands/: create_dev_admin.py
services/user-service/accounts/migrations/: 0001_initial.py
services/user-service/auth_api/: serializers.py  tokens.py  urls.py  views.py
services/user-service/config/: settings.py  urls.py
services/user-service/core/: kafka.py  logging.py  metrics.py  permissions.py  telemetry.py  urls.py  views.py
services/user-service/roles/: admin.py  models.py  serializers.py  urls.py  views.py
services/user-service/roles/management/commands/: seed_rbac.py
services/user-service/roles/migrations/: 0001_initial.py
services/user-service/subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
services/user-service/subscriptions/management/commands/: expire_trials.py
services/user-service/subscriptions/migrations/: 0001_initial.py
services/user-service/tests/: conftest.py  test_auth.py  test_pagination.py  test_rbac.py
services/video-service/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
services/video-service/catalog/: urls.py  views.py
services/video-service/config/: settings.py  test_settings.py  urls.py
services/video-service/core/: authentication.py  exceptions.py  kafka.py  logging.py  metrics.py  middleware.py  permissions.py  telemetry.py  views.py
services/video-service/tests/: conftest.py  test_from_live.py  test_pagination.py  test_upload.py  test_videos.py
services/video-service/uploaders/: admin.py  apps.py  models.py  s3.py  urls.py  views.py
services/video-service/uploaders/migrations/: 0001_initial.py
services/video-service/videos/: admin.py  internal_urls.py  internal_views.py  models.py  serializers.py  urls.py  views.py
services/video-service/videos/management/commands/: consume_transcode_events.py
services/video-service/videos/migrations/: 0001_initial.py  0002_add_live_session_id_to_video.py
(+137 files in other folders)
