[project]
name = "user-service"
version = "0.1.0"
description = "User & Auth service for the video streaming platform"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5,<7",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-allauth[socialaccount]>=65.0",
    "drf-spectacular>=0.28",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "confluent-kafka>=2.5",
    "cryptography>=43.0",
    "python-decouple>=3.8",
    "django-redis>=5.4",
    "pillow>=11.0",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "structlog>=24.4",
    "requests>=2.32",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-django>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-instrumentation-requests>=0.63b1",
    "elastic-apm>=6.26.1",
    "django-prometheus>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "faker>=30.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs>=6.0",
    "djangorestframework-stubs>=3.16",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "accounts.models",
    "accounts.serializers",
    "accounts.views",
    "auth_api.serializers",
    "auth_api.tokens",
    "auth_api.views",
    "roles.management.commands.seed_rbac",
    "roles.models",
    "subscriptions.views",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
