[project]
name = "video-service"
version = "0.1.0"
description = "Video upload, catalog, and transcode orchestration service"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5,<7",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.28",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "django-redis>=5.4",
    "confluent-kafka>=2.5",
    "boto3>=1.35",
    "python-decouple>=3.8",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "structlog>=24.4",
    "requests>=2.32",
    "django-filter>=24.0",
    "cryptography>=43.0",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-django>=0.63b1",
    "opentelemetry-instrumentation-redis>=0.63b1",
    "opentelemetry-instrumentation-requests>=0.63b1",
    "elastic-apm>=6.26.1",
    "django-prometheus>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "faker>=30.0",
    "moto[s3]>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs>=6.0",
    "djangorestframework-stubs>=3.16",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "videos.models",
    "videos.serializers",
    "videos.views",
    "videos.services",
    "uploaders.models",
    "uploaders.serializers",
    "uploaders.views",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.test_settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
